<resources>
    <string name="app_name">revvit</string>
    <string name="shared_preference_schedule">com.revit.schedule</string>
    <string name="search_hint">Search Faculty</string>
    <string name="ad_mob_id">ca-app-pub-7701305199379152~6749688798</string>
    <string name="no_search_result">No Results Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="nav_button_description">Nav Menu Button</string>
    <string name="add_review_hint">Review</string>
    <string name="add_review_heading">Add Review</string>
    <string name="submit_review_button">Submit</string>
    <string name="back_button_description">Back Button</string>
    <string name="add_review_button_description">Add Review Button</string>
    <string name="submit_feedback_button">Submit</string>
    <string name="feedback_heading">Feedback</string>
    <string name="feedback_hint">FeedBack</string>
    <string name="setting_up_time_table">Setting Up Time Table</string>
    <string name="login_to_ffcs_button">Login to FFCS</string>
    <string name="search_result_icon">Search Result Icon</string>
    <string name="feedback_helper_text">We\'ll love to know everything you felt about revvit.
        Feel free to suggest any new features or report any issues.
    </string>
    <string name="write_a_review">Write a Review</string>
    <string name="no_reviews_yet">No Reviews Yet</string>
    <string name="company_name">UnderGroundDevs</string>
    <string name="login_to_ffcs_info">Login to FFCS to synchronize
        your timetable for the Current Semester
    </string>
    <string name="ffcs_error">Error reaching FFCS. Try Again Later.</string>
    <string name="reset_time_table">Reset Time Table</string>
    <string name="feedback_nav_menu">Feedback</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_classes">No Classes</string>
    <string name="sign_in">Sign in</string>
    <string name="login_info">You need to be logged in to write reviews and provide feedback/issues.</string>

    <string name="privacy_policy_url">https://sites.google.com/view/revvitprivacypolicy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="read_privacy_policy">Read Privacy Policy</string>
    <string name="widget_row_icon_description">Course type icon</string>
    <string name="first_review">Be the first one to add a review.</string>
    <string name="no_classes_today">No Classes Today</string>

</resources>
