<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
            android:id="@+id/nav_menu_logged_in"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_reset_tt"
                android:title="@string/reset_time_table"/>
        <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback_nav_menu"/>

        <item
                android:id="@+id/nav_logout"
                android:title="@string/sign_out"/>
    </group>

    <group
            android:id="@+id/nav_menu_logged_out"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_reset_tt1"
                android:title="@string/reset_time_table"/>
        <item
                android:icon="@drawable/googleg_standard_color_18"
                android:id="@+id/nav_login"
                android:title="@string/sign_in"/>
    </group>


</menu>
