<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SearchActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/network_status_search"
                android:visibility="gone"
                android:background="@android:color/black"
                android:textColor="@android:color/white"
                android:text="@string/no_internet_connection"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_round_arrow_back_24px"
                    android:layout_marginStart="10dp"
                    style="@style/AppBarButton"
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back_button_description"/>
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_box"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_hint"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>
        </LinearLayout>


        <TextView
                android:visibility="gone"
                android:id="@+id/no_result"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_search_result"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>