<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FeedbackActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_feedback"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageButton
                        android:src="@drawable/ic_round_arrow_back_24px"
                        android:layout_centerVertical="true"
                        android:id="@+id/back_button_feedback"
                        style="@style/AppBarButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back_button_description"/>
                <TextView
                        android:layout_toEndOf="@id/back_button_feedback"
                        android:layout_margin="14dp"
                        android:text="@string/feedback_heading"
                        android:textColor="@color/appBarContent"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
                android:layout_below="@id/toolbar_feedback"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/feedback_helper_text"
                    android:layout_margin="15dp"
                    android:textColor="#21618c"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/feedback_hint"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
            android:layout_gravity="end|bottom"
            android:text="@string/submit_feedback_button"
            app:cornerRadius="10dp"
            style="@style/myButton"
            android:id="@+id/submit_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>