<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFFCSActivity">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <WebView
                android:id="@+id/web_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </WebView>

        <ImageButton
                android:src="@drawable/ic_round_arrow_back_24px"
                android:id="@+id/back_button_ffcs_login"
                style="@style/AppBarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button_description"/>

        <ProgressBar
                android:id="@+id/progress_circular_ffcs"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/setting_up_time_table"
                android:id="@+id/progress_circular_ffcs_text"
                android:visibility="gone"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_below="@id/progress_circular_ffcs"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:visibility="gone"
                android:id="@+id/error_screen"
                android:layout_centerInParent="true"
                android:drawableTop="@drawable/ic_warning"
                android:text="@string/ffcs_error"
                android:textAlignment="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>