<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fac_details_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.FacDetailsActivity">

    <TextView
            android:id="@+id/network_status_fac_details"
            android:visibility="gone"
            android:gravity="top"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/no_internet_connection"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_fac_details"
                android:layout_below="@+id/network_status_fac_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageButton
                        android:src="@drawable/ic_round_arrow_back_24px"
                        android:layout_centerVertical="true"
                        android:id="@+id/back_button_fac_details"
                        android:contentDescription="@string/back_button_description"
                        style="@style/AppBarButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ImageButton
                        android:layout_alignParentEnd="true"
                        android:id="@+id/add_review_button"
                        android:layout_centerVertical="true"
                        style="@style/AppBarButton"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_write"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/add_review_button_description"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:layout_below="@id/toolbar_fac_details"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:id="@+id/fac_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/fac_name"
                android:textColor="#2c3e50"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/fac_designation"
                android:textColor="#2471a3"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/fac_school"
                android:textColor="#2471a3"
                android:textSize="15sp"
                android:layout_margin="2dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>


    <androidx.cardview.widget.CardView
            android:id="@+id/adView_cover"
            android:layout_below="@id/fac_details"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView_fac_details"
                ads:adSize = "SMART_BANNER"
                ads:adUnitId = "ca-app-pub-7701305199379152/3227645095"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </com.google.android.gms.ads.AdView>
    </androidx.cardview.widget.CardView>

    <View
            android:layout_below="@+id/adView_cover"
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:elevation="5dp"
            android:layout_margin="2dp"
            android:background="#2c3e50"
            android:orientation="vertical" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/divider"
            android:id="@+id/reviewCardList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

    <include
            android:visibility="gone"
            android:id="@+id/no_reviews_page"
            android:layout_below="@+id/adView_cover"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            layout="@layout/no_reviews"/>

    <ProgressBar
            android:id="@+id/loading_circular"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

</RelativeLayout>